Bug 25879 - [4.2 Regression] TDF_CHAIN makes -fdump-tree-all-all useless
Summary: [4.2 Regression] TDF_CHAIN makes -fdump-tree-all-all useless
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: tree-optimization (show other bugs)
Version: 4.2.0
: P3 normal
Target Milestone: 4.2.0
Assignee: Andrew Pinski
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-01-20 15:24 UTC by Andrew Pinski
Modified: 2006-02-20 17:47 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2006-02-18 05:03:29


Attachments
patch which removes TDF_CHAIN and changes debug_tree_chain to debug_decl_chain (591 bytes, patch)
2006-01-20 15:34 UTC, Andrew Pinski
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Pinski 2006-01-20 15:24:03 UTC
A simple example like:
ypedef int nl_item;

extern char *nl_langinfo (nl_item __item) __attribute__ ((__nothrow__));

char *
xtermEnvEncoding(void)
{
  static char *result;

  if (result == 0) {

    result = nl_langinfo(1);
    ;
  }
  return result;
}

---
and compile with -O2 -fdump-tree-pre-all makes the dump look like:
xtermEnvEncoding ()
{
  static charD.1 long intD.2 unsigned intD.3 long unsigned intD.4 long long intD.5 long long unsigned intD.6 short intD.7 short unsigned intD.8 signed charD.9 unsigned charD.10 D.11 D.12 D.13 D.14 D.15 D.16 D.17 D.18 D.19 D.20 floatD.21 doubleD.22 long doubleD.23 _Decimal32D.24 _Decimal64D.25 _Decimal128D.26 complex intD.27 complex floatD.28 complex doubleD.29 complex long doubleD.30 voidD.31 __builtin_va_listD.32 ......

Cut off for Bugzilla.


That junk makes -fdump-tree-all-all useless now.
Comment 1 Andrew Pinski 2006-01-20 15:34:34 UTC
Created attachment 10689 [details]
patch which removes TDF_CHAIN and changes debug_tree_chain to debug_decl_chain

This patch removes TDF_CHAIN and it also changes debug_tree_chain to debug_decl_chain for the correct meaning of the function.
Comment 2 Andrew Pinski 2006-02-18 05:03:29 UTC
Mine.
Comment 3 Andrew Pinski 2006-02-20 17:47:39 UTC
Subject: Bug 25879

Author: pinskia
Date: Mon Feb 20 17:47:34 2006
New Revision: 111308

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=111308
Log:
2006-02-20  Andrew Pinski  <pinskia@physics.uc.edu>

        PR tree-opt/25879
        * tree-pretty-print.c (debug_tree_chain): Walk the chains.
        (dump_decl_name): Do not walk the decl tree chains.
        * tree-pass.h (TDF_CHAIN): Remove.


Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/tree-pass.h
    trunk/gcc/tree-pretty-print.c

Comment 4 Andrew Pinski 2006-02-20 17:47:45 UTC
Fixed.