2006-02-20  Andrew Pinski  <pinskia@physics.uc.edu>

PR tree-opt/25879
        * tree-pretty-print.c (debug_tree_chain): Walk the chains.
        (dump_decl_name): Do not walk the decl tree chains.
        * tree-pass.h (TDF_CHAIN): Remove.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@111308 138bc75d-0d04-0410-961f-82ee72b054a4